# MedImGVisual

./: README.md
source/: CMakeLists.txt  HelloWorld.cpp  itkDicomSeries.cpp  main.cpp  vcpkg.json  visual.cpp
source/.cache/clangd/index/: HelloWorld.cpp.2691BCC85CDCDA34.idx  visual.cpp.33B5CA136A21D4FC.idx
source/GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui  medimgui.cpp  medimgui.h  medimgui.ui  medimgui.ui.autosave  transfervaluesoptions.cpp  transfervaluesoptions.h  transfervaluesoptions.ui
source/IO/: ArgParser.cpp  DICOMReader.cpp  FileReader.hpp  MHAReader.cpp  ReaderFactory.cpp  VTIReader.cpp
source/utils/: ColorPiseVal.cpp  ColorPiseVal.h  Enums.hpp
